# CryptographicAnalysisOfSha2

./: .gitignore  Cargo.toml  README.md
data/: SHA224_FS_0.smt2  SHA224_FS_1.smt2  SHA224_FS_10.smt2  SHA224_FS_11.smt2  SHA224_FS_12.smt2  SHA224_FS_13.smt2  SHA224_FS_14.smt2  SHA224_FS_15.smt2  SHA224_FS_16.smt2  SHA224_FS_17.smt2  SHA224_FS_18.smt2  SHA224_FS_19.smt2  SHA224_FS_2.smt2  SHA224_FS_20.smt2  SHA224_FS_21.smt2  SHA224_FS_22.smt2  SHA224_FS_23.smt2  SHA224_FS_24.smt2  SHA224_FS_25.smt2  SHA224_FS_26.smt2  SHA224_FS_27.smt2  SHA224_FS_28.smt2  SHA224_FS_29.smt2  SHA224_FS_3.smt2  SHA224_FS_30.smt2  SHA224_FS_31.smt2  SHA224_FS_32.smt2  SHA224_FS_33.smt2  SHA224_FS_34.smt2  SHA224_FS_35.smt2  SHA224_FS_36.smt2  SHA224_FS_37.smt2  SHA224_FS_38.smt2  SHA224_FS_39.smt2  SHA224_FS_4.smt2  SHA224_FS_40.smt2  SHA224_FS_41.smt2  SHA224_FS_42.smt2  SHA224_FS_43.smt2  SHA224_FS_44.smt2  (+723 more)
github/: README.md
proofs/: encoding_and.smt2  encoding_bitwise_add.smt2  encoding_or.smt2  encoding_xor.smt2
reference/: unit_function_256.py
results/: SHA224_FS_MathSAT_0_2025-04-21 12:41:27.407670390 UTC.json  SHA224_FS_MathSAT_10_2025-04-21 12:41:28.763811373 UTC.json  SHA224_FS_MathSAT_11_2025-04-21 12:41:29.147671910 UTC.json  SHA224_FS_MathSAT_12_2025-04-21 12:41:29.571226337 UTC.json  SHA224_FS_MathSAT_13_2025-04-21 12:41:30.063063703 UTC.json  SHA224_FS_MathSAT_14_2025-04-21 12:41:30.604415862 UTC.json  SHA224_FS_MathSAT_15_2025-04-21 12:41:31.261658466 UTC.json  SHA224_FS_MathSAT_16_2025-04-21 12:41:31.902302112 UTC.json  SHA224_FS_MathSAT_17_2025-04-21 12:41:32.804016513 UTC.json  SHA224_FS_MathSAT_18_2025-04-21 12:41:33.978466952 UTC.json  SHA224_FS_MathSAT_19_2025-04-21 12:41:37.115218699 UTC.json  SHA224_FS_MathSAT_1_2025-04-21 12:41:27.420301087 UTC.json  SHA224_FS_MathSAT_20_2025-04-21 12:44:34.095500602 UTC.json  SHA224_FS_MathSAT_2_2025-04-21 12:41:27.451835375 UTC.json  SHA224_FS_MathSAT_3_2025-04-21 12:41:27.495246890 UTC.json  (+308 more)
smt/: SHA224_FS_0.smt2  (+1013 more)
src/: main.rs  (+2 more)
(+3888 files in other folders)
