[package]
name = "sha-256-collision"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"], optional = true }
serde_json = { version = "1.0.139", optional = true }

[features]
default = ["benchmarking"]
benchmarking = ["serde", "serde_json"]
