[package]
name = "sha-256-collision"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend", "line_series", "point_series"], optional = true }
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"], optional = true }
serde_json = { version = "1.0.139", optional = true }
regex = "1.11.1"
nix = { version = "0.29.0", features = ["signal"] }
wait-timeout = "0.2.1"
chrono = { version = "0.4.39", features = ["serde"] }

[features]
default = ["benchmarking", "graphing", "smt-gen"]
benchmarking = ["serde", "serde_json"]
graphing = ["serde", "serde_json", "plotters"]
smt-gen = []
