[package]
name = "sha2-collision"
authors = ["Supermarcel10"]
version = "0.1.2"
edition = "2024"
license = "CC BY-NC-SA"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend", "line_series", "point_series"] }
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
regex = "1.11.1"
nix = { version = "0.29.0", features = ["signal"] }
wait-timeout = "0.2.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.36", features = ["derive"] }
num-traits = "0.2.19"
